--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,5 +10,7 @@ dependencies = [
     "langchain-community>=0.3.29",
     "langchain-experimental>=0.3.4",
     "langchain-groq>=0.3.8",
+    "langchain-openai>=0.3.33",
     "langgraph>=0.6.7",
+    "psutil>=7.1.0",
 ]
