--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,14 @@ requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.30.1",
     "langchain>=0.3.27",
+    "langchain-chroma>=0.2.6",
     "langchain-community>=0.3.29",
     "langchain-experimental>=0.3.4",
     "langchain-groq>=0.3.8",
     "langchain-openai>=0.3.33",
     "langgraph>=0.6.7",
+    "networkx>=3.5",
     "psutil>=7.1.0",
+    "pymupdf>=1.26.4",
+    "unstructured>=0.18.15",
 ]
