--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,200 @@
-# AI File Search Agent - Requirements
-
-# Core dependencies
-streamlit>=1.28.0
-langgraph>=0.0.40
-langchain>=0.1.0
-langchain-community>=0.0.20
-langchain-groq>=0.1.0
-langchain-core>=0.1.0
-langchain-openai>=0.1.0
-
-# System utilities
-psutil>=5.9.0
-
-# Environment and configuration
-python-dotenv>=1.0.0
-pydantic>=2.0.0
-
-# Additional utilities
-typing-extensions>=4.0.0
-
-# Optional: For development and testing
-pytest>=7.0.0
-black>=23.0.0
-flake8>=6.0.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.15
+aiosignal==1.4.0
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.11.0
+asttokens==3.0.0
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.5
+black==25.9.0
+blinker==1.9.0
+build==1.3.0
+cachetools==5.5.2
+certifi==2025.8.3
+cffi==2.0.0
+charset-normalizer==3.4.3
+chromadb==1.1.0
+click==8.3.0
+colorama==0.4.6
+coloredlogs==15.0.1
+comm==0.2.3
+cryptography==46.0.1
+dataclasses-json==0.6.7
+debugpy==1.8.17
+decorator==5.2.1
+distro==1.9.0
+durationpy==0.10
+emoji==2.15.0
+executing==2.2.1
+filelock==3.19.1
+filetype==1.2.0
+flake8==7.3.0
+flatbuffers==25.9.23
+frozenlist==1.7.0
+fsspec==2025.9.0
+gitdb==4.0.12
+gitpython==3.1.45
+google-auth==2.40.3
+googleapis-common-protos==1.70.0
+greenlet==3.2.4
+groq==0.31.1
+grpcio==1.75.0
+h11==0.16.0
+html5lib==1.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.1
+huggingface-hub==0.35.1
+humanfriendly==10.0
+idna==3.10
+importlib-metadata==8.7.0
+importlib-resources==6.5.2
+iniconfig==2.1.0
+ipykernel==6.30.1
+ipython==9.5.0
+ipython-pygments-lexers==1.1.1
+jedi==0.19.2
+jinja2==3.1.6
+jiter==0.11.0
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+jupyter-client==8.6.3
+jupyter-core==5.8.1
+kubernetes==33.1.0
+langchain==0.3.27
+langchain-chroma==0.2.6
+langchain-community==0.3.29
+langchain-core==0.3.76
+langchain-experimental==0.3.4
+langchain-groq==0.3.8
+langchain-openai==0.3.33
+langchain-text-splitters==0.3.11
+langdetect==1.0.9
+langgraph==0.6.7
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.9
+langsmith==0.4.30
+lxml==6.0.2
+markdown-it-py==4.0.0
+markupsafe==3.0.2
+marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mccabe==0.7.0
+mdurl==0.1.2
+mmh3==5.2.0
+mpmath==1.3.0
+multidict==6.6.4
+mypy-extensions==1.1.0
+narwhals==2.5.0
+nest-asyncio==1.6.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.3.3
+oauthlib==3.3.1
+olefile==0.47
+onnxruntime==1.22.1
+openai==1.109.1
+opentelemetry-api==1.37.0
+opentelemetry-exporter-otlp-proto-common==1.37.0
+opentelemetry-exporter-otlp-proto-grpc==1.37.0
+opentelemetry-proto==1.37.0
+opentelemetry-sdk==1.37.0
+opentelemetry-semantic-conventions==0.58b0
+orjson==3.11.3
+ormsgpack==1.10.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.2
+parso==0.8.5
+pathspec==0.12.1
+pillow==11.3.0
+platformdirs==4.4.0
+pluggy==1.6.0
+posthog==5.4.0
+prompt-toolkit==3.0.52
+propcache==0.3.2
+protobuf==6.32.1
+psutil==7.1.0
+pure-eval==0.2.3
+pyarrow==21.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pybase64==1.4.2
+pycodestyle==2.14.0
+pycparser==2.23
+pydantic==2.11.9
+pydantic-core==2.33.2
+pydantic-settings==2.10.1
+pydeck==0.9.1
+pyflakes==3.4.0
+pygments==2.19.2
+pymupdf==1.26.4
+pypdf==6.1.0
+pypika==0.48.9
+pyproject-hooks==1.2.0
+pyreadline3==3.5.4
+pytest==8.4.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.1
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-oxmsg==0.0.2
+pytokens==0.1.10
+pytz==2025.2
+pywin32==311
+pyyaml==6.0.2
+pyzmq==27.1.0
+rapidfuzz==3.14.1
+referencing==0.36.2
+regex==2025.9.18
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.1.0
+rpds-py==0.27.1
+rsa==4.9.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.8
+sqlalchemy==2.0.43
+stack-data==0.6.3
+streamlit==1.50.0
+sympy==1.14.0
+tenacity==9.1.2
+tiktoken==0.11.0
+tokenizers==0.22.1
+toml==0.10.2
+tornado==6.5.2
+tqdm==4.67.1
+traitlets==5.14.3
+typer==0.19.2
+typing-extensions==4.15.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
+tzdata==2025.2
+unstructured==0.18.15
+unstructured-client==0.42.3
+urllib3==2.5.0
+uvicorn==0.37.0
+watchdog==6.0.0
+watchfiles==1.1.0
+wcwidth==0.2.14
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.3
+xxhash==3.5.0
+yarl==1.20.1
+zipp==3.23.0
+zstandard==0.25.0
