--- a/pyproject.toml
+++ b/pyproject.toml
@@ -147,6 +147,7 @@ dependencies = [
     "pymupdf==1.26.4",
     "pypdf==6.1.0",
     "pypika==0.48.9",
+    "pypiwin32>=223",
     "pyproject-hooks==1.2.0",
     "pyreadline3==3.5.4",
     "pytest==8.4.2",
