--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,6 @@ dependencies = [
     "importlib-metadata==8.7.0",
     "importlib-resources==6.5.2",
     "iniconfig==2.1.0",
-    "ipykernel==6.30.1",
     "ipython==9.5.0",
     "ipython-pygments-lexers==1.1.1",
     "jedi==0.19.2",
@@ -105,6 +104,7 @@ dependencies = [
     "nest-asyncio==1.6.0",
     "networkx==3.5",
     "nltk==3.9.1",
+    "nuitka>=2.7.16",
     "numpy==2.3.3",
     "oauthlib==3.3.1",
     "olefile==0.47",
@@ -156,6 +156,7 @@ dependencies = [
     "python-iso639==2025.2.18",
     "python-magic==0.4.27",
     "python-oxmsg==0.0.2",
+    "python-pptx>=1.0.2",
     "pytokens==0.1.10",
     "pytz==2025.2",
     "pywin32==311",
