added mcp server with all tools

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dependencies = [
     "durationpy==0.10",
     "emoji==2.15.0",
     "executing==2.2.1",
+    "fastmcp>=2.12.4",
     "filelock==3.19.1",
     "filetype==1.2.0",
     "flake8==7.3.0",
@@ -104,7 +105,6 @@ dependencies = [
     "nest-asyncio==1.6.0",
     "networkx==3.5",
     "nltk==3.9.1",
-    "nuitka>=2.7.16",
     "numpy==2.3.3",
     "oauthlib==3.3.1",
     "olefile==0.47",
