experimenting file search with vector database

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,12 +63,14 @@ dependencies = [
     "importlib-metadata==8.7.0",
     "importlib-resources==6.5.2",
     "iniconfig==2.1.0",
+    "ipykernel>=7.1.0",
     "ipython==9.5.0",
     "ipython-pygments-lexers==1.1.1",
     "jedi==0.19.2",
     "jinja2==3.1.6",
     "jiter==0.11.0",
     "joblib==1.5.2",
+    "jq>=1.10.0",
     "jsonpatch==1.33",
     "jsonpointer==3.0.0",
     "jsonschema==4.25.1",
@@ -82,6 +84,7 @@ dependencies = [
     "langchain-core==0.3.76",
     "langchain-experimental==0.3.4",
     "langchain-groq==0.3.8",
+    "langchain-ollama>=0.3.10",
     "langchain-openai==0.3.33",
     "langchain-text-splitters==0.3.11",
     "langdetect==1.0.9",
