--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,7 @@ dependencies = [
     "olefile==0.47",
     "onnxruntime==1.22.1",
     "openai==1.109.1",
+    "openpyxl>=3.1.5",
     "opentelemetry-api==1.37.0",
     "opentelemetry-exporter-otlp-proto-common==1.37.0",
     "opentelemetry-exporter-otlp-proto-grpc==1.37.0",
@@ -206,6 +207,7 @@ dependencies = [
     "websocket-client==1.8.0",
     "websockets==15.0.1",
     "wrapt==1.17.3",
+    "xlrd>=2.0.2",
     "xxhash==3.5.0",
     "yarl==1.20.1",
     "zipp==3.23.0",
