--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ dependencies = [
     "importlib-metadata==8.7.0",
     "importlib-resources==6.5.2",
     "iniconfig==2.1.0",
-    "ipykernel>=7.1.0",
+    "ipykernel==6.30.1",
     "ipython==9.5.0",
     "ipython-pygments-lexers==1.1.1",
     "jedi==0.19.2",
@@ -84,6 +84,7 @@ dependencies = [
     "langchain-core==0.3.76",
     "langchain-experimental==0.3.4",
     "langchain-groq==0.3.8",
+    "langchain-huggingface>=0.3.1",
     "langchain-ollama>=0.3.10",
     "langchain-openai==0.3.33",
     "langchain-text-splitters==0.3.11",
@@ -175,6 +176,7 @@ dependencies = [
     "rich==14.1.0",
     "rpds-py==0.27.1",
     "rsa==4.9.1",
+    "sentence-transformers>=5.1.2",
     "shellingham==1.5.4",
     "six==1.17.0",
     "smmap==5.0.2",
