--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ annotated-types==0.7.0
 anyio==4.11.0
 asttokens==3.0.0
 attrs==25.3.0
+authlib==1.6.4
 backoff==2.2.1
 bcrypt==4.3.0
 beautifulsoup4==4.13.5
@@ -23,13 +24,21 @@ colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.3
 cryptography==46.0.1
+cyclopts==3.24.0
 dataclasses-json==0.6.7
 debugpy==1.8.17
 decorator==5.2.1
 distro==1.9.0
+dnspython==2.8.0
+docstring-parser==0.17.0
+docutils==0.22.2
 durationpy==0.10
+email-validator==2.3.0
 emoji==2.15.0
+et-xmlfile==2.0.0
+exceptiongroup==1.3.0
 executing==2.2.1
+fastmcp==2.12.4
 filelock==3.19.1
 filetype==1.2.0
 flake8==7.3.0
@@ -58,13 +67,16 @@ iniconfig==2.1.0
 ipykernel==6.30.1
 ipython==9.5.0
 ipython-pygments-lexers==1.1.1
+isodate==0.7.2
 jedi==0.19.2
 jinja2==3.1.6
 jiter==0.11.0
 joblib==1.5.2
+jq==1.10.0
 jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.25.1
+jsonschema-path==0.3.4
 jsonschema-specifications==2025.9.1
 jupyter-client==8.6.3
 jupyter-core==5.8.1
@@ -75,6 +87,8 @@ langchain-community==0.3.29
 langchain-core==0.3.76
 langchain-experimental==0.3.4
 langchain-groq==0.3.8
+langchain-huggingface==0.3.1
+langchain-ollama==0.3.10
 langchain-openai==0.3.33
 langchain-text-splitters==0.3.11
 langdetect==1.0.9
@@ -83,14 +97,17 @@ langgraph-checkpoint==2.1.1
 langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.9
 langsmith==0.4.30
+lazy-object-proxy==1.12.0
 lxml==6.0.2
 markdown-it-py==4.0.0
 markupsafe==3.0.2
 marshmallow==3.26.1
 matplotlib-inline==0.1.7
 mccabe==0.7.0
+mcp==1.15.0
 mdurl==0.1.2
 mmh3==5.2.0
+more-itertools==10.8.0
 mpmath==1.3.0
 multidict==6.6.4
 mypy-extensions==1.1.0
@@ -101,8 +118,14 @@ nltk==3.9.1
 numpy==2.3.3
 oauthlib==3.3.1
 olefile==0.47
+ollama==0.6.0
 onnxruntime==1.22.1
 openai==1.109.1
+openapi-core==0.19.5
+openapi-pydantic==0.5.1
+openapi-schema-validator==0.6.3
+openapi-spec-validator==0.7.2
+openpyxl==3.1.5
 opentelemetry-api==1.37.0
 opentelemetry-exporter-otlp-proto-common==1.37.0
 opentelemetry-exporter-otlp-proto-grpc==1.37.0
@@ -114,7 +137,9 @@ ormsgpack==1.10.0
 overrides==7.7.0
 packaging==25.0
 pandas==2.3.2
+parse==1.20.2
 parso==0.8.5
+pathable==0.4.4
 pathspec==0.12.1
 pillow==11.3.0
 platformdirs==4.4.0
@@ -139,7 +164,9 @@ pyflakes==3.4.0
 pygments==2.19.2
 pymupdf==1.26.4
 pypdf==6.1.0
+pyperclip==1.11.0
 pypika==0.48.9
+pypiwin32==223
 pyproject-hooks==1.2.0
 pyreadline3==3.5.4
 pytest==8.4.2
@@ -147,7 +174,9 @@ python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-iso639==2025.2.18
 python-magic==0.4.27
+python-multipart==0.0.20
 python-oxmsg==0.0.2
+python-pptx==1.0.2
 pytokens==0.1.10
 pytz==2025.2
 pywin32==311
@@ -159,25 +188,37 @@ regex==2025.9.18
 requests==2.32.5
 requests-oauthlib==2.0.0
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
 rich==14.1.0
+rich-rst==1.3.1
 rpds-py==0.27.1
 rsa==4.9.1
+safetensors==0.6.2
+scikit-learn==1.7.2
+scipy==1.16.3
+sentence-transformers==5.1.2
+setuptools==80.9.0
 shellingham==1.5.4
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.8
 sqlalchemy==2.0.43
+sse-starlette==3.0.2
 stack-data==0.6.3
+starlette==0.48.0
 streamlit==1.50.0
 sympy==1.14.0
 tenacity==9.1.2
+threadpoolctl==3.6.0
 tiktoken==0.11.0
 tokenizers==0.22.1
 toml==0.10.2
+torch==2.9.0
 tornado==6.5.2
 tqdm==4.67.1
 traitlets==5.14.3
+transformers==4.57.1
 typer==0.19.2
 typing-extensions==4.15.0
 typing-inspect==0.9.0
@@ -193,7 +234,10 @@ wcwidth==0.2.14
 webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
+werkzeug==3.1.1
 wrapt==1.17.3
+xlrd==2.0.2
+xlsxwriter==3.2.9
 xxhash==3.5.0
 yarl==1.20.1
 zipp==3.23.0
