--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.15
 aiosignal==1.4.0
 altair==5.5.0
+annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.11.0
 asttokens==3.0.0
@@ -38,6 +39,8 @@ emoji==2.15.0
 et-xmlfile==2.0.0
 exceptiongroup==1.3.0
 executing==2.2.1
+fastapi==0.121.2
+fastembed==0.7.3
 fastmcp==2.12.4
 filelock==3.19.1
 filetype==1.2.0
@@ -98,6 +101,7 @@ langgraph-prebuilt==0.6.4
 langgraph-sdk==0.2.9
 langsmith==0.4.30
 lazy-object-proxy==1.12.0
+loguru==0.7.3
 lxml==6.0.2
 markdown-it-py==4.0.0
 markupsafe==3.0.2
@@ -150,6 +154,7 @@ propcache==0.3.2
 protobuf==6.32.1
 psutil==7.1.0
 pure-eval==0.2.3
+py-rust-stemmers==0.1.5
 pyarrow==21.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
@@ -235,6 +240,7 @@ webencodings==0.5.1
 websocket-client==1.8.0
 websockets==15.0.1
 werkzeug==3.1.1
+win32-setctime==1.2.0
 wrapt==1.17.3
 xlrd==2.0.2
 xlsxwriter==3.2.9
